Добавлена запись анонсов в БД (без жанров)
Запись в БД работает, но без жанров.

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 BOT_TOKEN = 7583203987:AAGDbyCKewPoVtywWa6nHsSpepGUIhFyVyA
+DATABASE_URL=postgresql+asyncpg://ani4k_db_owner:yW7R6qgMeBux@ep-icy-moon-a2q0ziqt.eu-central-1.aws.neon.tech/ani4k_db
