Добавлено поднятие в начало тайтлов, чьи серии добавлены недавно, рефакторинг
Если добавлен новый эпизод, то тайтл поднимается в начало списка. Изменены команды для админа (/admin, с проверкой по ID) и для всех (/start)

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ BOT_TOKEN = 7583203987:AAGDbyCKewPoVtywWa6nHsSpepGUIhFyVyA
 # DATABASE_URL=postgresql+asyncpg://ani4k_db_owner:yW7R6qgMeBux@ep-icy-moon-a2q0ziqt.eu-central-1.aws.neon.tech/ani4k_db
 # DATABASE_URL=postgresql://uor9tkiytgrb5cml4uf5:mKcRq7k181opiIpV6hF45zud8bU85h@bywfjpfgis9crwjzthx5-postgresql.services.clever-cloud.com:50013/bywfjpfgis9crwjzthx5
 DATABASE_URL=sqlite+aiosqlite:///./local_db.sqlite
+ADMIN_ID = 491203291
+CHAT_ID = '-1002104882531'  # ID чата
