Улучшено логирование в терминале, автодобавление серий в БД и создание темы для анонса
Доработан мидлварь, который теперь при получении сообщения из топика группы будет пропускать его в дальнейшую обработку, где новую серию поймает handle_video_message, которая и добавит новую серию по названию аниме в базу данных.

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ BOT_TOKEN = 7583203987:AAGDbyCKewPoVtywWa6nHsSpepGUIhFyVyA
 # DATABASE_URL=postgresql://uor9tkiytgrb5cml4uf5:mKcRq7k181opiIpV6hF45zud8bU85h@bywfjpfgis9crwjzthx5-postgresql.services.clever-cloud.com:50013/bywfjpfgis9crwjzthx5
 DATABASE_URL=sqlite+aiosqlite:///./local_db.sqlite
 ADMIN_ID = 491203291
-CHAT_ID = '-1002104882531'  # ID чата
+CHAT_ID = "-1002104882531"
